--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "aufgaben-app-mint-academy",
-    "description": "No description",
-    "slug": "snack-2900ed30-38c5-41cb-9b2c-f5e1d766e55f",
+    "name": "github.com/gmdielegende/coding-2_react-native-basis",
+    "description": "GMdieLegende/coding-2_react-native-basis @ Jan 15, 2020",
+    "slug": "snack-e4b5fdcc-6377-4c27-ba92-24b57943cea8",
     "privacy": "unlisted",
     "sdkVersion": "35.0.0",
     "version": "1.0.0",
