--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aufgaben-app-mint-academy",
+  "name": "github.com/gmdielegende/coding-2_react-native-basis",
   "version": "0.0.0",
-  "description": "No description",
+  "description": "GMdieLegende/coding-2_react-native-basis @ Jan 15, 2020",
   "author": null,
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
@@ -19,9 +19,12 @@
     "prop-types": "15.7.2",
     "react-dom": "16.8.3",
     "react-native-web": "0.11.7",
+    "expo-calendar": "8.0.0",
+    "react-navigation": "3.0.0-rc.5",
     "react-native-paper": "2.16.0",
+    "react-native-webview": "8.0.3",
     "react-native-elements": "1.2.7",
-    "react-native-sortable-listview": "0.2.8",
-    "react-native-vector-icons": "6.6.0"
+    "react-native-vector-icons": "6.6.0",
+    "react-native-sortable-listview": "0.2.8"
   }
 }
